[build-system]
requires = ["cython", "setuptools >= 40.6.0", "wheel", "gencodegenes"]
build-backend = 'setuptools.build_meta'

[project]
name = "denovonear"
version = "0.12.0"
description = 'Package to examine de novo clustering'
readme = 'README.md'
requires-python = '>=3.9'
authors = [
    {name = 'Jeremy McRae', email = 'jeremy.mcrae@gmail.com'},
]

dependencies = [
    'aiohttp >= 3.9.0b0',
    'scipy >= 0.9.0',
    'gencodegenes >= 1.0.10',
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "License :: OSI Approved :: MIT License",
]

[project.optional-dependencies]
pysam = ["pysam"]

[tool.setuptools]
packages = [
    "denovonear",
    "denovonear.data",
]

[project.urls]
homepage = 'https://github.com/jeremymcrae/denovonear'

[project.scripts]
denovonear = "denovonear.__main__:main"

